network-policy/deny-all-netpol.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: stage
spec:
  podSelector: {}
  ingress:
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
        podSelector:
          matchLabels:
            k8s-app: kube-dns
      ports:
      - port: 53
        protocol: TCP
      - port: 53
        protocol: UDP
  policyTypes:
    - Ingress
    - Egress
